added create/update(put & patch) endpoints for stores and stores now returns owner's username
